# XAUUSD-Calendar-Agent

./: .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  AGENTS.md  LICENSE  NOTICE  QWEN.md  README.md  package.json  requirements-app.txt  requirements-calendar.txt  requirements-ci.txt  requirements.txt
.github/workflows/: ci.yml  event-history-consistency-audit.yml  event-history-index.yml  event-history-previous-audit.yml  release.yml
app/: README.md  main.py  web_app.py  web_backend.py
app/agent/: __init__.py  calendar_loader.py  calendar_update.py  config.py  currency_options.py  event_history.py  git_ops.py  logger.py  scheduler.py  sync.py  (+3 more)
app/tauri/src-tauri/: Cargo.toml  build.rs  installer_hooks.nsh  tauri.conf.json
app/tauri/src-tauri/capabilities/: default.json
app/tauri/src-tauri/src/: calendar.rs  commands.rs  config.rs  git_ops.rs  main.rs  seed_repo.rs  snapshot.rs  startup.rs  state.rs  sync_util.rs  time_util.rs
app/tauri/src-tauri/src/commands/: history.rs  lifecycle.rs  logs.rs  mod.rs  open.rs  pull.rs  settings.rs  snapshot_cmd.rs  sync.rs  ui.rs  update.rs
docs/: calendar-delayed-publication-events.md  event-history-review.md  getting-started.md
installer/: XAUUSDCalendarAgent.iss
scripts/: build_installer.ps1  check_currency_options_sync.py  prepare-seed-repo.mjs  sync-version.mjs
tests/: test_calendar_chunking.py  test_calendar_processing.py  test_calendar_pruning.py  test_calendar_refetch.py  test_config_migrations.py  test_config_schema_stability.py
ui-tests/: package-lock.json  package.json  playwright.config.ts
(+382 files in other folders)
